# grpc_gw_bazel_bug

./: .gitignore  BUILD.bazel  WORKSPACE  go.mod  go.sum
proto/: BUILD.bazel  foo.proto
scripts/: gazelle_update_repos.sh
